--- a/DEMO_APP/static/frontend/css/result.css
+++ b/DEMO_APP/static/frontend/css/result.css
@@ -1,84 +1,59 @@
-@import url(//db.onlinewebfonts.com/c/041a069e9ea3324a0b0c767aef875f17?family=Fira+Sans);
-* {
-  font-family: 'Fira Sans';
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-size: 40px;
-  color: black;
-  font-weight: bold;
-}
-.content_page {
-  width: 100%;
-  height: 100%;
-  
-  display: flex;
-  flex-direction: column;
-}
-.header {
-  position: sticky;
-  top: 0;
-  height: 20%;
-  display: flex;
-  align-items: center;
-  background: linear-gradient(135deg, white, #b6dbf5, #0c68b3);
-  box-shadow: 0 5px 5px 0 grey;
-}
-.icon {
-  height: 50px;
-  width: 40%;
-  margin: 20px 70px;
-}
-.icon img {
-  height: 100%;
-}
-.above_zone {
-  margin-top:50px;
-  height: 20%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+@import url(style.css);
+body {
+    background-color: var(--Dark-Blue)
 }
 
-.query_item {
-  width: 30%;
-  margin: 30px;
-  margin-top: 10px;
+.title {
+    margin: 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
 }
-.query_item img {
-  width: 100%;
-  height: 100%;
+.section {
+    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 100px;
 }
+
+.title1 {
+    font-family: 'Outfit';
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 3rem;
+    /* 57.292% */
+    letter-spacing: 1.17rem;
+    text-transform: uppercase;
+    margin-bottom: 2.87rem;
+    background: var(--Gradient);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.subt {
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+}
+
 .result_zone {
-  margin-top: 20px;
-  width: 100%;
-  height: 60%;
-  background-color: #b6dbf5;
-  display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-
+    display: flex;
+    flex-direction: row;
+    margin-top: 2rem;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .result_zone_item {
-  border: #b6dbf5;
-  width: 24vw;
-  height: 60vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 30px;
- 
+    width: fit-content;
+    height: fit-content;
 }
-
 .result_zone_item img {
-  margin: 10px;
- max-width: 90%;
- max-height: 90%;
+    width: 400px;
+    height: auto;
+    margin: 10px;
 }
-
-/* img{
-    height: 50px;
-    width: 50px;
-} */
