--- a/DEMO_APP/templates/about.html
+++ b/DEMO_APP/templates/about.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CS336</title>
-    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="/static/frontend/css/about.css">
 </head>
 
 <body>
     <div class="header">
         <div class="logo">
-            <img src="../src/Logo.png" alt="" class="logoimg">
+            <img src="/static/frontend/src/Logo.png" alt="" class="logoimg">
         </div>
         <ul class="navbar">
-            <li><a href="home.html" class="nav-item">Home</a></li>
-            <li><a href="search.html" class="nav-item">Search</a></li>
-            <li><a href="about.html" class="nav-item">About Us</a></li>
+            <li><a href="{{ url_for('home') }}" class="nav-item">Home</a></li>
+            <li><a href="{{ url_for('search') }}" class="nav-item">Search</a></li>
+            <li><a href="{{ url_for('about') }}" class="nav-item">About Us</a></li>
         </ul>
     </div>
 
@@ -24,7 +24,7 @@
     <div class="section">
         <div class="person">
             <div class="avt">
-                <img src="../src/ngocnga.png" alt="">
+                <img src="/static/frontend/src/ngocnga.png" alt="">
             </div>
             <div class="info">
                 <p class="name">Nguyen Thi Ngoc Nga</p>
@@ -33,7 +33,7 @@
         </div>
         <div class="person">
             <div class="avt">
-                <img src="../src/namvo.png" alt="">
+                <img src="/static/frontend/src/namvo.png" alt="">
             </div>
             <div class="info">
                 <p class="name">Vo Nguyen Hoai Nam</p>
@@ -42,7 +42,7 @@
         </div>
         <div class="person">
             <div class="avt">
-                <img src="../src/kimyen.png" alt="">
+                <img src="/static/frontend/src/kimyen.png" alt="">
             </div>
             <div class="info">
                 <p class="name">Le Thi Kim Yen</p>
@@ -51,7 +51,7 @@
         </div>
         <div class="person">
             <div class="avt">
-                <img src="../src/thanhthanh.png" alt="">
+                <img src="/static/frontend/src/thanhthanh.png" alt="">
             </div>
             <div class="info">
                 <p class="name">Truong Thi Thanh Thanh</p>
@@ -60,7 +60,7 @@
         </div>
         <div class="person">
             <div class="avt">
-                <img src="../src/tramanh.png" alt="">
+                <img src="/static/frontend/src/tramanh.png" alt="">
             </div>
             <div class="info">
                 <p class="name">Pham Tram Anh</p>
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <script src="../js/main.js"></script>
+    <script src="/static/frontend/js/main.js"></script>
 </body>
 
 </html>
