--- a/DEMO_APP/templates/home.html
+++ b/DEMO_APP/templates/home.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CS336</title>
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="/static/frontend/css/home.css">
 </head>
 
 <body>
     <div class="header">
         <div class="logo">
-            <img src="../src/Logo.png" alt="" class="logoimg">
+            <img src="/static/frontend/src/Logo.png" alt="" class="logoimg">
         </div>
         <ul class="navbar">
-            <li><a href="home.html" class="nav-item">Home</a></li>
-            <li><a href="search.html" class="nav-item">Search</a></li>
-            <li><a href="about.html" class="nav-item">About Us</a></li>
+            <li><a href="{{ url_for('home') }}" class="nav-item" id="homelink">Home</a></li>
+            <li><a href="{{ url_for('search') }}" class="nav-item" id="searchlink">Search</a></li>
+            <li><a href="{{ url_for('about') }}" class="nav-item" id="aboutlink">About Us</a></li>
         </ul>
     </div>
     <div class="bg">
@@ -32,7 +32,7 @@
             <button class="getStartBtn" onclick="toSearch()">Get Started</button>
         </div>
         <div class="right-col">
-            <img src="../src/Computer.png" alt="" class="rightImg">
+            <img src="/static/frontend/src/Computer.png" alt="" class="rightImg">
         </div>
     </div>
 
@@ -41,7 +41,7 @@
             window.location.href = "search";
         }
     </script>
-    <script src="../js/main.js"></script>
+    <script src="/static/frontend/js/main.js"></script>
 </body>
 
 </html>
