--- a/DEMO_APP/templates/search.html
+++ b/DEMO_APP/templates/search.html
@@ -71,7 +71,7 @@
             </div>
             <div class="upload_image">
                 <label for="image" id="uploadBtn">Upload an image</label>
-                <input type="file" id="uploaded_img" name="uploaded_img" >
+                <input type="file" id="uploaded_img" name="uploaded_img"  hidden="true">
                 <input type="text" name="urlfile" id="urlfile"  hidden="true">
                 <img src="" alt="" id="uploading_img" >
             </div>  
